adding add category and list all
