# categories-service/src/main/java/com/tatomarietti/categories/service/api/dto/CategoryDto.java
@@ -1,0 +1,12 @@
+package com.tatomarietti.categories.service.api.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class CategoryDto {
+  private String name;
+}
