# categories-service/src/main/java/com/tatomarietti/categories/service/app/model/Category.java
@@ -1,16 +1,29 @@
 package com.tatomarietti.categories.service.app.model;
 
 import com.tatomarietti.categories.service.app.errors.InvalidNameException;
-import lombok.EqualsAndHashCode;
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 import lombok.Value;
 import org.apache.commons.lang3.StringUtils;
 
-@Value
+import javax.persistence.Entity;
+import javax.persistence.Id;
+import javax.persistence.Table;
+import javax.persistence.UniqueConstraint;
+
+@Data
+@Entity
+@NoArgsConstructor
+@Setter(AccessLevel.PRIVATE)
 public class Category {
 
-  private final String name;
+  @Id
+  private String name = "UNINITIALIZED";
 
-  public Category(final String name) {
+  private Category(final String name) {
     if (!isValidName(name)) {
       throw new InvalidNameException("Category name cannot be null or empty and should contain only uppercase characters");
     }
